--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    cursor: pointer;
 }
 .CardImgWrapper {
     display: flex;
